--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
 				<tr>
 					<td><button class="button" onclick="buyAupg(4)">Increase the base multiplier to 2.5x.<br>Cost: 5 &micro;E</button></td>
 					<td><button class="button" onclick="buyAupg(5)">You start micro prestiges with 3 CP/sec<br>Cost: 10 &micro;E</button></td>
-					<td><button class = 'button' onclick = 'buyAupg(6)'>The growth factor is higher based on unspent µE. Cost:18</button></td>
+					<td><button class = 'button' onclick = 'buyAupg(6)'>The growth factor is higher based on unspent µE. <br>Currently: <span id = 'A6power'>1</span>x.<br>Cost:18</button></td>
 				</tr>
 				<tr>
-					<td><button class="button" onclick="buyAupg(7)">Increase the base multiplier based on number of micro prestiges.<br>Currently: <span id="A6power">1</span>x.<br>Cost: 18 &micro;E</button></td>
+					<td><button class="button" onclick="buyAupg(7)">Increase the base multiplier based on number of micro prestiges.<br>Currently: <span id="A7power">1</span>x.<br>Cost: 18 &micro;E</button></td>
 					<td><button class="button" onclick="buyAupg(8)">Increase the base multiplier by 5x if your number is below 1e33.<br>Cost: 50 &micro;E</button></td>
-					<td><button class = 'button' onclick = 'buyAupg(9)'> The growth factor is higher based on your current CP amount Cost: 100 µE</button></td>
+					<td><button class = 'button' onclick = 'buyAupg(9)'> The growth factor is higher based on your current CP amount.<br>Currently: <span id = 'A9power'>1</span>x.<br>Cost: 100 µE</button></td>
 				</tr>
 				<tr>
 					<td><button class="button" onclick="buyRepeatA()">You gain 10% more &micro;E.<br>Currently: <span id="microEssenceMult">1</span>x.<br>Cost: <span id="RepeatACost">25</span> &micro;E</button></td>
