--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
                 <div id="microEssenceInfo" style="display:none">Micro Essence: <div id="microEssenceDisplay">0</div></div>
                 <button class="button" onclick="switchTab('main')">Main</button>
                 <button class="button" onclick="switchTab('options')">Options</button>
+		<button class = 'button' onclick = 'switchTab("stats")'>Statistics</button>
                 <button id="microPrestigeTab" class="button" style="display:none" onclick="switchTab('microprestige')">Micro Prestige</button>
                 <button id = 'breakNumeralsTab' class = 'button' style = 'display:none' onclick = "switchTab('breaknumerals')">Break Numerals</button>
 		<div id="main" style="display:inline-block">
@@ -26,9 +27,9 @@
                         </div>                
                         <div id="microPrestigeElement" style="display:none">
                                 Your number has overflowed, you must reset to continue.
-                                <button class="button" onclick="microPrestige()">Reset your number, but a Micro essence for upgrades.</button>
+                                <button class="button" onclick="microPrestige()">Reset your number, but get 1 Micro essence for upgrades.</button>
                         </div>
-                        <button class = 'button' onclick = 'microPrestige()' style = 'display:none' id = 'microReset'>Reset your number, but gain <div id = 'ueOnReset'>1</div> Micro Essense</button>
+                        <button class = 'button' onclick = 'microPrestige()' style = 'display:none' id = 'microReset'>Reset your number, but gain <div id = 'ueOnReset'>1</div> Micro Essence</button>
                 </div>
                 <div id="options" style="display:none">
                         <button class="button" onclick="save()">Save</button>
