--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 		<script src='path/to/break_infinity.js'></script>
         </head>
         <body onload="init()">
-                <p style="font-size: 150%">Number: <div id="numDisplay">1</div><p>
-                <div id="microEssenceInfo" style="display:none">Micro Essence: <div id="microEssenceDisplay">0</div></div>
+                <p style="font-size: 150%">Number: <p style="font-size: 150%"><div id="numDisplay">1</p></div></p>
+                <p style="color:#1abc9c;"><div id="microEssenceInfo" style="display:none">Micro Essence: <div id="microEssenceDisplay">0</div></div><p>
                 <button class="button" onclick="switchTab('main')">Main</button>
                 <button class="button" onclick="switchTab('options')">Options</button>
 		<button class = 'button' onclick = 'switchTab("stats")'>Statistics</button>
