--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 		<div id="main" style="display:inline-block">
                         <div id="increaseNumber">
                                 <button class="button" onclick="step()">Multiply the number by <div id="multDisplay">1.5</div> for 3 Click Points</button>
-                                You have <div id="clickPoints">0</div> Click Points.
-                                You are gaining <div id = 'cpPerSec'>1</div> per second
-                                Your max Click Points is <div id = 'maxCP'>3</div>
+                                <p>You have <div id="clickPoints">0</div> Click Points.</p>
+                                <p>You are gaining <div id = 'cpPerSec'>1</div> per second</p>
+                                <p>Your max Click Points is <div id = 'maxCP'>3</div></p>
                         </div>
                         <div id = 'numberUpgrades'>
                                 <button class = 'button' onclick = 'numUpgrade()'>Increase growth rate by 0.25 percent. Cost: Divides your number by<div id = 'numCost'>1000</div></button>
