--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<script src='path/to/break_infinity.js'></script>
         </head>
         <body onload="init()">
-                <h1 style="text-align:center;">Number: <div id="numDisplay">1</div></h>
+                <p style="text-align:center;">Number: <div id="numDisplay">1</div></p>
                 <div id="microEssenceInfo" style="display:none">Micro Essence: <div id="microEssenceDisplay">0</div></div>
                 <button class="button" onclick="switchTab('main')">Main</button>
                 <button class="button" onclick="switchTab('options')">Options</button>
