--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				<tr>
 					<td><button class="button" onclick="buyAupg(4)">Increase the base multiplier to 2.5x.<br>Cost: 5 &micro;E</button></td>
 					<td><button class="button" onclick="buyAupg(5)">You start micro prestiges with 3 CP/sec<br>Cost: 10 &micro;E</button></td>
-					<td><button class = 'button' onclick = 'buyAupg(6)'>The growth factor is higher based on unspent µE. <br>Currently: <span id = 'A6power'>1</span>x.<br>Cost:18</button></td>
+					<td><button class = 'button' onclick = 'buyAupg(6)'>The growth factor is higher based on unspent µE. <br>Currently: <span id = 'A6power'>1</span>x.<br>Cost:18 &micro;E</button></td>
 				</tr>
 				<tr>
 					<td><button class="button" onclick="buyAupg(7)">Increase the base multiplier based on number of micro prestiges.<br>Currently: <span id="A7power">1</span>x.<br>Cost: 18 &micro;E</button></td>
