--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         </head>
         <body onload="init()">
                 <p style="text-align:center;">Number: <div id="numDisplay">1</div></p>
-                <div id="microEssenceInfo" style="display:none">Micro Essence: <div id="microEssenceDisplay">0</div></div>
+                <p style="text-align:right;"><div id="microEssenceInfo" style="display:none">Micro Essence: <div id="microEssenceDisplay">0</div></div></p>
                 <button class="button" onclick="switchTab('main')">Main</button>
                 <button class="button" onclick="switchTab('options')">Options</button>
 		<button class = 'button' onclick = 'switchTab("stats")'>Statistics</button>
