--- a/changelog.html
+++ b/changelog.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 <title>Changelog</title>
- <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <center><h1>Changelog of Exponent Madness</h1></center>
-<center><h2>filler</h2></center>
-<center><p>filler</p></center>
+<center><h2>21<sub>th</sub> November, 2018</h2></center>
+<center><p>Game created.</p></center>
 
 </body>
 </html>
