--- a/changelog.html
+++ b/changelog.html
@@ -7,7 +7,7 @@
 <body>
 
 <center><h1>Changelog of Exponent Madness</h1></center>
-<center><h2>21<sub>th</sub> November, 2018</h2></center>
+<center><h2>21<sup>th</sup> November, 2018</h2></center>
 <center><p>Game created.</p></center>
 
 </body>
