--- a/changelog.html
+++ b/changelog.html
@@ -7,7 +7,19 @@
 <body>
 
 <center><h1>Changelog of Exponent Madness</h1></center>
-<center><h2>21<sup>th</sup> November, 2018</h2></center>
+<center><h2>31<sup>st</sup> December, 2018</h2></center>
+<center><p>Added support for numbers bigger than 1.79e308.</p></center>
+<center><p>Added Standard notation.</p></center>
+<center><h2>27<sup>th</sup> December, 2018</h2></center>
+<center><p>Added Break Numerals.</p></center>
+<center><h2>23<sup>rd</sup> December, 2018</h2></center>
+<center><p>Added Micro Prestige and Pre-Micro Prestige stuff.</p></center>
+<center><h2>23<sup>rd</sup> November, 2018</h2></center>
+<center><p>Added A upgrades.</p></center>
+<center><h2>22<sup>nd</sup> November, 2018</h2></center>
+<center><p>Added saving, export/import and hard reset.</p></center>
+<center><p>Added visuals.</p></center>
+<center><h2>21<sup>st</sup> November, 2018</h2></center>
 <center><p>Game created.</p></center>
 
 </body>
