--- a/changelog.html
+++ b/changelog.html
@@ -21,7 +21,7 @@
 <center><p>Added visuals.</p></center>
 <center><h2>21<sup>st</sup> November, 2018</h2></center>
 <center><p>Game created.</p></center>
-<center><p><a href="https://itmarki.github.io/exponent-madness/">Exponent Madness</a></p></center>
+<center><h3><a href="https://itmarki.github.io/exponent-madness/">Exponent Madness</a></h3></center>
 
 </body>
 </html>
