--- a/changelog.html
+++ b/changelog.html
@@ -7,6 +7,8 @@
 <body>
 
 <center><h1>Changelog of Exponent Madness</h1></center>
+<center><h2>2<sup>nd</sup> January, 2019</h2></center>
+<center><p>Added changelog.</p></center>
 <center><h2>31<sup>st</sup> December, 2018</h2></center>
 <center><p>Added support for numbers bigger than 1.79e308.</p></center>
 <center><p>Added Standard notation.</p></center>
@@ -14,7 +16,6 @@
 <center><p>Added Break Numerals.</p></center>
 <center><h2>23<sup>rd</sup> December, 2018</h2></center>
 <center><p>Added Micro Prestige and Pre-Micro Prestige stuff.</p></center>
-<center><h2>23<sup>rd</sup> November, 2018</h2></center>
 <center><p>Added A upgrades.</p></center>
 <center><h2>22<sup>nd</sup> November, 2018</h2></center>
 <center><p>Added saving, export/import and hard reset.</p></center>
